Adicionando swagger doc para products
