# internal/dto/dto.go
@@ -3,7 +3,7 @@ package dto
 type CreateProductInput struct {
 	Name  string  `json:"name"`
 	Price float64 `json:"price"`
-}
+} // @name CreateProductRequest
 
 
 type CreateUserInput struct {
